--- a/public_html/storyboard.html
+++ b/public_html/storyboard.html
@@ -27,7 +27,7 @@
 			</div>
 			<div class="col-md-4">
 				<div style="text-align: left">
-					<p class="instruct">Please click through tabs 1 - 10, to view full image
+					<p class="instruct">Please click through tabs 1 - 8, to view full image
 						<a href="images/fullPictureStoryboard.jpg" target="_blank"> CLICK HERE </a></p>
 				</div>
 			</div>
@@ -57,14 +57,12 @@
 							</li>
 							<li><a class="tab img.long" href="#data-erasure" data-toggle="tab" onclick="document.getElementById('mainPic').src='images/story6.jpg'">6: Data erasure</a>
 							</li>
-							<li><a class="tab" href="#value-estimate" data-toggle="tab" onclick="document.getElementById('mainPic').src='images/story7.jpg'">7: Value estimate</a>
+							<li><a class="tab" href="#customer-decision" data-toggle="tab" onclick="document.getElementById('mainPic').src='images/story7.jpg'">7: Customer Decision</a>
 							</li>
-							<li><a class="tab" href="#blind-bidding" data-toggle="tab" onclick="document.getElementById('mainPic').src='images/story8.jpg'">8: Blind bidding</a>
+							<li><a class="tab" href="#sell-items" data-toggle="tab" onclick="document.getElementById('mainPic').src='images/story8.jpg'">8: Sell items</a>
 							</li>
-							<li><a class="tab" href="#sold" data-toggle="tab" onclick="document.getElementById('mainPic').src='images/story9.jpg'">9: Sold</a>
-							</li>
-							<li><a class="tab" href="#sale-complete" data-toggle="tab" onclick="document.getElementById('mainPic').src='images/story10.jpg'">10: Sale complete</a>
-							</li>
+
+
 						</ul>
 					</div>
 				</div>
@@ -114,17 +112,12 @@
 								activaTab('data-erasure');
 								break;
 							case 55:
-								activaTab('value-estimate');
+								activaTab('customer-decision');
 								break;
 							case 56:
-								activaTab('blind-bidding');
+								activaTab('sell-items');
 								break;
-							case 57:
-								activaTab('sold');
-								break;
-							case 48:
-								activaTab('sale-complete');
-								break;
+
 
 
 						}
