--- a/public_html/s2s_factory_v2.html
+++ b/public_html/s2s_factory_v2.html
@@ -987,10 +987,14 @@
 
 							addText("Checking emails, and orders on computer", -30.9 * meter, 2 * meter, 12.5 * meter, (Math.PI / 2));
 							createsfDeskonPhone(-30 * meter, 0, 6 * meter, 0, '0_refurbd5', addNewssfDeskonPhone);
-							addText("On phone to sales", -30.9 * meter, 2 * meter, 6.5 * meter, (Math.PI / 2));
+							addText("On phone to sales:", -30.9 * meter, 2 * meter, 6.5 * meter, (Math.PI / 2));
+							addText("Informing locked phone,", -30.9 * meter, 1.7 * meter, 6.5 * meter, (Math.PI / 2));
+							addText("updating status", -30.9 * meter, 1.5 * meter, 6.5 * meter, (Math.PI / 2));
 
 							createsfdeskprocessing(-30 * meter, 0, 2 * meter, 0, '0_refurbd6', addNewsfdeskprocessing);
-							addText("Tagging and asset tracking", -30.9 * meter, 2 * meter, 2.7* meter, (Math.PI / 2));
+							addText("Attach unique ID tag", -30.9 * meter, 2 * meter, 2.7* meter, (Math.PI / 2));
+							addText("Input details on asset tracking system", -30.9 * meter, 1.7 * meter, 2.7* meter, (Math.PI / 2));
+							addText("Functional testing", -30.9 * meter, 1.5 * meter, 2.7* meter, (Math.PI / 2));
 
 							addBigText("Offices", -30.9* meter, 4.5* meter, 14.24 * meter, (Math.PI / 2));
 
@@ -1221,11 +1225,11 @@
 
 							createOfficeDeskOccupied(-24 * meter, 3 * meter, 20 * meter, 0, '1_officeDeskPC_sales1', addNewofficedeskOccupied);
 							addBigText("Sales Offices", -21.9 * meter, 5.5 * meter, 20 * meter, (Math.PI / 2));
-							addText("Sales Manager", -23.2 * meter, 5.3 * meter, 20 * meter, (-Math.PI / 2));
-							addText("On phone or email to:", -23.2 * meter, 4.9 * meter, 20 * meter, (-Math.PI / 2));
-							addText("shop floor,", -23.3 * meter, 4.7 * meter, 20 * meter, (-Math.PI / 2));
-							addText("customer,", -23.3 * meter, 4.5 * meter, 20 * meter, (-Math.PI / 2));
-							addText("or buyer.", -23.3 * meter, 4.3 * meter, 20 * meter, (-Math.PI / 2));
+							addText("Sales Manager", -23.4 * meter, 5.3 * meter, 20 * meter, (-Math.PI / 2));
+							addText("On phone or email to:", -23.4 * meter, 4.9 * meter, 20 * meter, (-Math.PI / 2));
+							addText("shop floor,", -23.4 * meter, 4.7 * meter, 20 * meter, (-Math.PI / 2));
+							addText("customer,", -23.4 * meter, 4.5 * meter, 20 * meter, (-Math.PI / 2));
+							addText("or buyer.", -23.4 * meter, 4.3 * meter, 20 * meter, (-Math.PI / 2));
 
 							createOfficeDeskPC(-24 * meter, 3 * meter, 24 * meter, 0, '1_officeDeskPC_sales1', addNewOfficeDeskPC);
 
